fix: [SERVER-01] 피드백 반영
- workflow 파일명 deploy.yml → deploy-server.yml
- GitHub Secret SERVER_SSH_KEY → SSH_PRIVATE_KEY
- CORS localhost:5500, 127.0.0.1:5500 추가
- 환경별 CORS 분리 (prod 프로파일에서 로컬 origin 차단)
- docker-compose에 SPRING_PROFILES_ACTIVE=prod 적용